fix(modal): style update for textarea input

--- a/client/src/style/sass/common/_modal.scss
+++ b/client/src/style/sass/common/_modal.scss
@@ -257,6 +257,10 @@
         overflow: auto;
     }
 
+    .ta-scroll-window {
+      height: auto;
+    }
+
     .scroll-list {
         margin-left: -20px;
         max-height: 540px;
